--- a/package.json
+++ b/package.json
@@ -6,16 +6,24 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build --base=/a-team/",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "prepare": "npx husky install"
   },
   "devDependencies": {
-    "vite": "^4.0.5",
-    "glob": "^8.1.0"
+    "glob": "^8.1.0",
+    "husky": "^8.0.3",
+    "lint-staged": "^14.0.1",
+    "vite": "^4.0.5"
   },
   "author": "Alexander Repeta <alexander.repeta@gmail.com>",
   "license": "ISC",
   "dependencies": {
     "vite-plugin-full-reload": "^1.0.5",
     "vite-plugin-html-inject": "^1.0.1"
+  },
+  "lint-staged": {
+    "*.{html,md}": [
+      "prettier --write"
+    ]
   }
 }
