--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "glob": "^8.1.0",
     "husky": "^8.0.3",
     "lint-staged": "^14.0.1",
+    "prettier": "^3.0.3",
     "vite": "^4.0.5"
   },
   "author": "Alexander Repeta <alexander.repeta@gmail.com>",
